--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,6 +92,7 @@ jobs:
           python -m unittest test_typing_extensions.py
 
       - name: Archive code coverage results
+        id: archive-coverage
         if: ${{ !startsWith(matrix.python-version, 'pypy') }}
         uses: actions/upload-artifact@v4
         with:
@@ -99,7 +100,6 @@ jobs:
           path: ./src/.coverage*
           include-hidden-files: true
           compression-level: 0 # no compression
-
       - name: Test CPython typing test suite
         # Test suite fails on PyPy even without typing_extensions
         if: ${{ !startsWith(matrix.python-version, 'pypy') }}
@@ -108,6 +108,9 @@ jobs:
           # Run the typing test suite from CPython with typing_extensions installed,
           # because we monkeypatch typing under some circumstances.
           python -c 'import typing_extensions; import test.__main__' test_typing -v
+    outputs:
+      # report if coverage was uploaded
+      cov_uploaded: ${{ steps.archive-coverage.outputs.artifact-id }}
 
   create-issue-on-failure:
     name: Create an issue if daily tests failed
@@ -123,8 +126,8 @@ jobs:
           && needs.tests.result == 'failure'
         }}
 
-    #permissions:
-    #  issues: write
+    permissions:
+      issues: write
 
     steps:
       - uses: actions/github-script@v7
@@ -144,11 +147,12 @@ jobs:
     runs-on: ubuntu-latest
 
     needs: [tests]
+
     permissions:
-      contents: read
       pull-requests: write
 
-    if: ${{ always() }}
+    # Job will run even if tests failed but only if at least one artifact was uploaded
+    if: ${{ always() && needs.tests.outputs.cov_uploaded != '' }}
 
     steps:
       - uses: actions/checkout@v4
@@ -174,25 +178,39 @@ jobs:
           ls -aR .coverage*
           coverage combine .coverage*
           echo "Creating coverage report..."
+          # Create a coverage report (console)
           coverage report
+          # Create xml file for further processing
           coverage xml
+
+      # For future use in case we want to add a PR comment for 3rd party PRs which requires
+      # a workflow with elevated PR write permissions. Move below steps into a separate job.
+      - name: Archive code coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage
+          path: coverage.xml
 
       - name: Code Coverage Report
         uses: irongut/CodeCoverageSummary@51cc3a756ddcd398d447c044c02cb6aa83fdae95 # v1.3.0
         with:
           filename: coverage.xml
           badge: true
-          fail_below_min: false
+          fail_below_min: true
           format: markdown
           hide_branch_rate: false
           hide_complexity: true
           indicators: true
-          output: both
-          thresholds: '80 90'
+          output: both  # console, file or both
+          thresholds: '90 95'
 
       - name: Add Coverage PR Comment
         uses: marocchino/sticky-pull-request-comment@52423e01640425a022ef5fd42c6fb5f633a02728  # v2.9.3
-        if: github.event_name == 'pull_request'
+        # Create PR comment when the branch is on the repo, otherwise we lack PR write permissions
+        # -> need another workflow with access to secret token
+        if: >-
+          github.event_name == 'pull_request'
+          && github.event.pull_request.head.repo.full_name == github.repository
         with:
           recreate: true
           path: code-coverage-results.md
