Add html coverage report

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -178,18 +178,29 @@ jobs:
           ls -aR .coverage*
           coverage combine .coverage*
           echo "Creating coverage report..."
-          # Create a coverage report (console)
-          coverage report
+          # Create a html that can be downloaded. We always want it so do not fail
+          coverage html --fail-under=0
           # Create xml file for further processing
-          coverage xml
+          coverage xml --fail-under=0
+          # Create a coverage report (console), respects fail_under in pyproject.toml
+          coverage report
 
       # For future use in case we want to add a PR comment for 3rd party PRs which requires
       # a workflow with elevated PR write permissions. Move below steps into a separate job.
-      - name: Archive code coverage report
+      - name: Archive code coverage xml report
         uses: actions/upload-artifact@v4
         with:
           name: coverage
           path: coverage.xml
+      - name: Archive code coverage html report
+        id: htmlcov
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage_html
+          path: htmlcov/
+      - name: Post link to html report
+        run: |
+          echo "HTML report available at: ${{ steps.htmlcov.outputs.artifact-url }}"
 
       - name: Code Coverage Report
         uses: irongut/CodeCoverageSummary@51cc3a756ddcd398d447c044c02cb6aa83fdae95 # v1.3.0
